@@ -1,3 +1,4 @@
+6/12/12 make equation spinners update correctly when they skip over zero value to prevent slope=0/0
 6/12/12 add specialization of StraightLine that snaps its args to an integer grid
 6/12/12 encapsulate method of rounding and formatting doubles to ints in SimplifiedEquationFactory.toIntString
 6/12/12 show equation on line while manipulators are in use, since we're snapping to grid [65022]
